--- a/css/style.css
+++ b/css/style.css
@@ -524,7 +524,7 @@ a:hover {
 
 /* Stile tabella responsiva */
 table {
-  border: 1px solid #ccc;
+  border: 0px solid #ccc;
   border-collapse: collapse;
   margin: 0;
   padding: 0;
@@ -535,8 +535,10 @@ table {
 
 table tr {
   background-color: #ffffff;
-  border: 1px solid #ddd;
+  border: 0px solid #ddd;
   padding: .35em;
+  color: #000;
+  font-size: 14px;
 }
 
 tr:nth-child(even) {
@@ -580,8 +582,9 @@ table th {
     width: 1px;
   }
   
+  
   table tr {
-    border-bottom: 3px solid #ddd;
+    border-bottom: 1px solid #F08700;
     display: block;
     margin-bottom: .625em;
   }
@@ -603,4 +606,8 @@ table th {
   table td:last-child {
     border-bottom: 0;
   }
+  
+  
 }
+
+
